Fix stacking order for product card on mobile.

--- a/src/components/product-card.module.scss
+++ b/src/components/product-card.module.scss
@@ -15,6 +15,7 @@
 
 .hoverImage {
   position: absolute;
+  z-index: var(--level-one);
   top: 0;
   left: 0;
   height: 100%;
@@ -44,6 +45,7 @@
 }
 
 .productDetailsStyle {
+  z-index: var(--level-one);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
